testsuite/tests/typecheck/should_fail/tcfail175.stderr

tcfail175.hs:11:1: error:
    • Couldn't match expected type ‘a’
                  with actual type ‘String -> String -> String’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          evalRHS :: forall a. Int -> a
        at tcfail175.hs:10:1-19
    • The equation(s) for ‘evalRHS’ have three value arguments,
        but its type ‘Int -> a’ has only one
    • Relevant bindings include
        evalRHS :: Int -> a (bound at tcfail175.hs:11:1)
